@@ -1,4 +1,8 @@
 
+2006-07-30 Lynn Garren
+
+	* HEPEVT_Wrapper.h: fix for 64bit machines
+
 2006-07-26 Lynn Garren
 	
 	* HepMC/PdfInfo.h implements information requested by CMS
